--- a/.GitHub/workflows/changelog.yml
+++ b/.GitHub/workflows/changelog.yml
@@ -29,8 +29,8 @@ jobs:
 
       - name: 🚀 Commit & Push
         run: |
-          git config --global user.name "StudyShare Bot"
-          git config --global user.email "bot@studyshare.com"
+          git config --global user.name "Portal-OS Bot"
+          git config --global user.email "bot@portalos.com"
           if [[ `git status --porcelain` ]]; then
             git add CHANGELOG.md
             git commit -m "docs: 📝 AI-Enhanced Changelog Update [skip ci]"
